5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1592_2043.log
== TEST (2019-03-29 18:13:30) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma/4)
print(round(media,2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:13:41) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma/4)
print(round(media,2))
-- EXECUTION TIME:
0.170644
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:54) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma/4)
print(round(media,2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:14:32) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma//4)
print(round(media,2))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:15:01) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma//4)
print(round(media,2))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:15:23) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma/4)
print(round(media,2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:16:17) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma/4)
print(round(media,2))
-- EXECUTION TIME:
0.294849
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:16:33) 
-- CODE:
p1=(input("p1:"))
p2=(input("p2:"))
p3=(input("p3:"))
p4=(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma/4)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media= (soma/4)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:17:25) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1+p2+p3+p4)
media= (soma%4)
print(round(media,2))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:18:31) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*1+p2*2+p3*3+p4*4)
media= (soma/4)
print(round(media,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:18:54) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*1+p2*2+p3*3+p4*4)
media= (soma%4)
print(round(media,2))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:19:06) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*1+p2*2+p3*3+p4*4)
media= (soma%4)
print(round(media,2))
-- EXECUTION TIME:
0.155994
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:19:15) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*1+p2*2+p3*3+p4*4)
media= (soma//4)
print(round(media,2))
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:31:49) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*0.01)+p2*(p2*0,02)+p3(p3*0.03)+p4(p4*0.04))  
media= (soma/100)
print(round(media,2))
-- ERROR:
File "XXXX", line 5
    soma= (p1*(p1*0.01)+p2*(p2*0,02)+p3(p3*0.03)+p4(p4*0.04))  
                                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:32:32) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*p1*0.01+p2*p2*0,02+p3*p3*0.03+p4*p4*0.04)  
media= (soma/100)
print(round(media,2))
-- ERROR:
File "XXXX", line 5
    soma= (p1*p1*0.01+p2*p2*0,02+p3*p3*0.03+p4*p4*0.04)  
                               ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:38:42) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*0.01)+p2*(p2*0,02)+p3*(p3*0.03)+p4*(p4*0.04) ) 
media= (soma/100)
print(round(media,2))
-- ERROR:
File "XXXX", line 5
    soma= (p1*(p1*0.01)+p2*(p2*0,02)+p3*(p3*0.03)+p4*(p4*0.04) ) 
                                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:39:36) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*1/100)+p2*(p2*2/100)+p3*(p3*3/100)+p4*(p4*4/100) ) 
media= (soma/100)
print(round(media,2))
-- OUTPUT:
0.07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:40:05) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*1/100)+p2*(p2*2/100)+p3*(p3*3/100)+p4*(p4*4/100) ) 
media= (soma)
print(round(media,2))
-- OUTPUT:
6.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:40:56) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*1//100)+p2*(p2*2//100)+p3*(p3*3//100)+p4*(p4*4//100) ) 
media= (soma)
print(round(media,2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:41:03) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*1//100)+p2*(p2*2//100)+p3*(p3*3//100)+p4*(p4*4//100) ) 
media= (soma)
print(round(media,2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:41:20) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*1/100)+p2*(p2*2/100)+p3*(p3*3/100)+p4*(p4*4/100) ) 
media= (soma/1)
print(round(media,2))
-- OUTPUT:
6.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:48:21) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100) ) 
media= (soma/1)
print(round(media,2))
-- OUTPUT:
67.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:11:34) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/100 

print(round(soma,2))
-- OUTPUT:
0.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:12:10) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/1

print(round(soma,2))
-- OUTPUT:
67.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:12:28) 
-- CODE:
p1=float(input("p1:"))
p2=float(input("p2:"))
p3=float(input("p3:"))
p4=float(input("p4:"))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,2))
-- OUTPUT:
6.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:14:20) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,2))
-- OUTPUT:
6.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:14:38) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,2))
-- EXECUTION TIME:
0.134691
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.63
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:15:13) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*00/100)+p2*(p2*10/100)+p3*(p3*20/100)+p4*(p4*30/100))/10

print(round(soma,2))
-- OUTPUT:
4.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:18:36) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*20/100)+p2*(p2*30/100)+p3*(p3*40/100)+p4*(p4*50/100))/10

print(round(soma,2))
-- OUTPUT:
9.21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:19:34) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,2))
-- OUTPUT:
6.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:20:06) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,2))
-- EXECUTION TIME:
0.266784
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.63
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:20:08) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,2))
-- OUTPUT:
6.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:20:32) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,3))
-- OUTPUT:
6.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:20:44) 
-- CODE:
p1=int(float(input("p1:")))
p2=int(float(input("p2:")))
p3=int(float(input("p3:")))
p4=int(float(input("p4:")))
soma= (p1*(p1*10/100)+p2*(p2*20/100)+p3*(p3*30/100)+p4*(p4*40/100))/10

print(round(soma,3))
-- EXECUTION TIME:
0.206155
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.63
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
